intro animation added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/2b56eff395.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./style.css">
     <title>Mert Şakar | Web Developer</title>
 </head>
@@ -49,8 +52,8 @@
         <section id="intro" class="text-center">
             <div id="overlay">
                 <div class="intro-content" id="greet">
-                    <h2>HELLO, I'M MERT</h2>
-                    <p>Engineer, Web developer & Web/Mobile App enthusiast</p>
+                    <h2 class="animate__animated animate__fadeInDown">HELLO, I'M MERT</h2>
+                    <p class="animate__animated animate__fadeInUp">Engineer, Web developer & Web/Mobile App enthusiast</p>
                 </div>
             </div>
         </section>
@@ -182,7 +185,7 @@
         <!--Contact section-->
         <section id="contact">
             <div class="container text-center">
-                <i class="fas fa-paper-plane my-5" id="airplane"></i>
+                <i class="fas fa-paper-plane my-5 animate__animated" id="airplane"></i>
                 <h2 class="mb-3">GET IN TOUCH!</h2>
                 <p>Have an interesting project for me?</p>
                 <p>Or you just want to say hello?</p>
