new projects added and skills animated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   />
     <link rel="stylesheet" href="./style.css">
     <title>Mert Şakar | Web Developer</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
 </head>
 <body>
     <div id="content">
@@ -96,7 +98,35 @@
                     <p>Here are some of my work.</p>
                 </div>
                 <div class="row d-flex justify-content-evenly">
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2">
+                        <img src="./sources/images/Pomodoro Clock.png" class="card-img-top my-2 border-black" alt="Drum Machine live website image">
+                        <div class="card-body">
+                          <h5 class="card-title"><strong>Pomodoro Clock</strong></h5>
+                          <p class="card-text">A Pomodoro Clock app created with React. Adjustable session and break times. </p>
+                        </div>
+                        <div class="card-footer bg-white border-white">
+                          <div class="row">
+                              <a href="https://horzu.github.io/pomodoro-clock/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
+                              <a href="https://github.com/horzu/pomodoro-clock" target="_blank" class="btn btn-secondary">View Source</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card m-2">
+                        <img src="./sources/images/Javascript Calculator.png" class="card-img-top my-2 border-black" alt="Drum Machine live website image">
+                        <div class="card-body">
+                          <h5 class="card-title"><strong>Calculator</strong></h5>
+                          <p class="card-text">A calculator app created with React. Allows multiple inputs and evaluates final solution.</p>
+                        </div>
+                        <div class="card-footer bg-white border-white">
+                          <div class="row">
+                              <a href="https://horzu.github.io/calculator/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
+                              <a href="https://github.com/horzu/calculator" target="_blank" class="btn btn-secondary">View Source</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card m-2">
                         <img src="./sources/images/drum-machine.png" class="card-img-top my-2 border-black" alt="Drum Machine live website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Drum Machine</strong></h5>
@@ -110,7 +140,7 @@
                         </div>
                     </div>
 
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2">
                         <img src="./sources/images/Random-quote-machine.png" class="card-img-top my-2 border border-dark" alt="Random Quote Machine live website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Random Quote Machine</strong></h5>
@@ -123,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2">
                         <img src="./sources/images/markdown-previewer.png" class="card-img-top my-2 border border-black" alt="Markdownd previewer live website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Markdown Previwer</strong></h5>
@@ -137,7 +167,7 @@
                         </div>
                     </div>
                     
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2">
                         <img src="./sources/images/personal-webpage.png" class="card-img-top my-2 border border-black" alt="Personal website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Old Personal Website</strong></h5>
@@ -160,23 +190,23 @@
             <div class="container">
                 <div class="row p-1 text-center">
                     <h2 class="mb-4">SKILLS</h2>
-                    <div class="col-4">
-                        <i class="fab fa-html5 fs-1"></i><p>HTML</p>
-                        <i class="fab fa-css3-alt fs-1"></i><p>CSS</p>
-                        <i class="fab fa-js fs-1"></i><p>JAVASCRIPT</p>
-                        <i class="fab fa-python fs-1"></i><p>PYTHON</p>
+                    <div data-aos="zoom-in" class="col-4">
+                        <i data-aos="zoom-in" class="fab fa-html5 fs-1"></i><p>HTML</p>
+                        <i data-aos="zoom-in" class="fab fa-css3-alt fs-1"></i><p>CSS</p>
+                        <i data-aos="zoom-in" class="fab fa-js fs-1"></i><p>JAVASCRIPT</p>
+                        <i data-aos="zoom-in" class="fab fa-python fs-1"></i><p>PYTHON</p>
                     </div>
-                    <div class="col-4">
-                        <i class="fab fa-react fs-1"></i><p>REACT</p>
-                        <i class="fab fa-bootstrap fs-1"></i><p>BOOTSTRAP</p>
-                        <i class="fab fa-sass fs-1"></i><p>SASS</p>
+                    <div data-aos="zoom-in" class="col-4">
+                        <i data-aos="zoom-in" class="fab fa-react fs-1"></i><p>REACT</p>
+                        <i data-aos="zoom-in" class="fab fa-bootstrap fs-1"></i><p>BOOTSTRAP</p>
+                        <i data-aos="zoom-in" class="fab fa-sass fs-1"></i><p>SASS</p>
                     </div>
-                    <div class="col-4">
-                        <i class="fab fa-git-square fs-1"></i><p>GIT</p>
-                        <i class="fab fa-github-square fs-1"></i><p>GITHUB</p>
-                        <i class="fas fa-terminal fs-1"></i><p>TERMINAL</p>
-                        <i class="fab fa-chrome fs-1"></i><p>CHROME DEV-TOOLS</p>
-                        <i class="fab fa-npm fs-1"></i><p>NPM</p>
+                    <div data-aos="zoom-in" class="col-4">
+                        <i data-aos="zoom-in" class="fab fa-git-square fs-1"></i><p>GIT</p>
+                        <i data-aos="zoom-in" class="fab fa-github-square fs-1"></i><p>GITHUB</p>
+                        <i data-aos="zoom-in" class="fas fa-terminal fs-1"></i><p>TERMINAL</p>
+                        <i data-aos="zoom-in" class="fab fa-chrome fs-1"></i><p>CHROME DEV-TOOLS</p>
+                        <i data-aos="zoom-in" class="fab fa-npm fs-1"></i><p>NPM</p>
                     </div>
                 </div>
             </div>
@@ -204,7 +234,7 @@
                 <div id="contact-icon" class="fs-3 my-3">
                     <a href="https://www.linkedin.com/in/mert-sakar-8436805b/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
                     <a href="https://github.com/horzu" target="_blank"><i class="fab fa-github icon"></i></a>
-                    <a href="https://twitter.com/mertCoding" target="_blank"><i class="fab fa-twitter icon"></i></a>
+                    <a href="https://twitter.com/mert_sak_" target="_blank"><i class="fab fa-twitter icon"></i></a>
                     <a href="https://open.spotify.com/user/11123022282" target="_blank"><i class="fab fa-spotify"></i></a>
                     <a href="https://www.instagram.com/mertsakar/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/mert.sakar.315" target="_blank"><i class="fab fa-facebook-square"></i></a>
@@ -222,5 +252,12 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
