e-commerce site added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                 </div>
                 <div class="row d-flex justify-content-evenly">
                     <div class="card m-2">
+                        <img src="./sources/images/e-commerce.png" class="card-img-top my-2 border-black" alt="e-commerce live website image">
+                        <div class="card-body">
+                          <h5 class="card-title"><strong>e-commerce Demo</strong></h5>
+                          <p class="card-text">A demo e-commerce store with payment and shipping options. </p>
+                        </div>
+                        <div class="card-footer bg-white border-white">
+                          <div class="row">
+                              <a href="https://horzu.github.io/e-commerce/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
+                              <a href="https://github.com/horzu/e-commerce" target="_blank" class="btn btn-secondary">View Source</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-2">
                         <img src="./sources/images/Pomodoro Clock.png" class="card-img-top my-2 border-black" alt="Drum Machine live website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Pomodoro Clock</strong></h5>
