new project added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                 </div>
                 <div class="row d-flex justify-content-evenly">
                     <div class="card m-2">
+                        <img src="./sources/images/voice-assistant-news.png" class="card-img-top my-2 border-black" alt="voice-assistant-news live website image">
+                        <div class="card-body">
+                          <h5 class="card-title"><strong>Voice Assistant News App</strong></h5>
+                          <p class="card-text">A news site with voice assistant AI. </p>
+                        </div>
+                        <div class="card-footer bg-white border-white">
+                          <div class="row">
+                              <a href="https://horzu.github.io/voice-assistant-news/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
+                              <a href="https://github.com/horzu/voice-assistant-news" target="_blank" class="btn btn-secondary">View Source</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-2">
                         <img src="./sources/images/chat-app.png" class="card-img-top my-2 border-black" alt="chat-app live website image">
                         <div class="card-body">
                           <h5 class="card-title"><strong>Chat App</strong></h5>
