--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
                         <p>Hi! I am Mert! I am an Industrial Engineer and I have a M.Sc. in International Trade and Finance. 
                             I have nearly 5 years of experience as Industrial Engineer.
                         </p>
-                        
                         <p>
-                            I think commanding a non-living thing whether for fun or for a task is amazing. I love doing hard or repetetive boring tasks with programs. 
+                            I think commanding a non-living thing whether for fun or for a task is amazing. I love handling repetetive tasks with programs. 
                             With just a little bit adjustment, computers can solve our problems and do all the boring stuff for us.
                         </p>
                         <p>
@@ -80,9 +79,8 @@
                             After a while I realised most exciting parts of my career was those moments when I create programs. So, I decided to change my career to tech.
                         </p>
                         <p>
-                            I'm a self thougt developer with a passion for web development and mobile app development.
+                            I'm a self thaugt developer with a passion for web development and mobile app development.
                         </p>
-        
                     </div>
                 </div>
             </div>
