--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             After a while I realised most exciting parts of my career was those moments when I create programs. So, I decided to change my career to tech.
                         </p>
                         <p>
-                            I'm a self thaugt developer with a passion for web development and mobile app development.
+                            I'm a Self-Taugt Developer with a passion for web development and mobile app development.
                         </p>
                     </div>
                 </div>
