linkedIn link changed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <h2>ABOUT ME</h2>
               <img src="./sources/images/profile-pic.jpg" alt="Mert Şakar's photo" class="img-responsive" />
               <p>
-                Hi! I am Mert! I am an Industrial Engineer and I have a M.Sc. in International Trade and Finance. I have nearly 5 years of experience as
+                Hi! I am Mert! I am an Industrial Engineer and I have a M.Sc. in International Trade and Finance. I have more than 5 years of experience as
                 Industrial Engineer.
               </p>
               <p>
@@ -284,7 +284,7 @@
       <footer class="bg-dark text-white p-1">
         <div class="container text-center">
           <div id="contact-icon" class="fs-3 my-3">
-            <a href="https://www.linkedin.com/in/mert-sakar-8436805b/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
+            <a href="https://www.linkedin.com/in/mert-sakar/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
             <a href="https://github.com/horzu" target="_blank"><i class="fab fa-github icon"></i></a>
             <a href="https://twitter.com/mert_sak_" target="_blank"><i class="fab fa-twitter icon"></i></a>
             <a href="https://open.spotify.com/user/11123022282" target="_blank"><i class="fab fa-spotify"></i></a>
