google console meta tag added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="google-site-verification" content="Hsqk7CPafoHOgvzXJnCayBWm2eAItM6Nu1jqMPuuYNQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="mert, şakar, mert şakar, front-end, web, website, computer, software, developer, engineer, designer" />
     <meta name="author" content="Mert Şakar" />
