--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google-site-verification" content="Hsqk7CPafoHOgvzXJnCayBWm2eAItM6Nu1jqMPuuYNQ" />
+    <meta name="ahrefs-site-verification" content="7cfa94fc4d089adf00c678ff0bb6a000a630210130d3e2a21077c6d9f8635616">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="mert, şakar, mert şakar, front-end, web, website, computer, software, developer, engineer, designer" />
     <meta name="author" content="Mert Şakar" />
